discussion/kv_engine/181671/181671_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Filter out events in the front end thread

Change-Id: I447e30e2b66cb9e383c5a03e3ea292e6c5aeee3a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-21 13:35:49.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-21 13:54:05.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11208/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11208/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22830/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22830/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23411/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23411/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23815/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23815/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24650/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24650/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31833/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31833/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21384/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/event.cc:108:5: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
    Expects(descriptor);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21384/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/event.cc:108:5:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21384/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42457/ : FAILURE

CMake error: CMakeLists.txt:156 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42457/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11112/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11112/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20643/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
